--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,8 +47,8 @@
     --heading-color: #1D2043;
     --primary-color: #DF5646;
     --light-color: #FAFAFA;
-    --base-font:'sarabun','Poppins', sans-serif;
-    --heading-font:'IBM Plex sans Thai','Playfair Display', serif;
+    --base-font: 'Sarabun', 'Poppins', sans-serif;
+    --heading-font: 'IBM Plex Sans Thai', 'Playfair Display', serif;
 }
 
 body {
